Implemented discussed improvements.